styles.css
@import 'https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400';

body {
    background: linear-gradient(to top right, #09203F, #537895);
}

.container {
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    align-items: center;
    min-height: 100vh;
    padding-top: 20px;
}

.title {
    font-family: "Source Sans Pro", Helvetica, sans-serif;
    font-size: 80px;
    font-weight: 100;
    text-align: center;
    margin-top: 0;
    margin-bottom: 0;
    color: white;
}

.subtitle {
    font-family: "Source Sans Pro", Arial, sans-serif;
    font-size: 25px;
    font-weight: 100;
    text-align: center;
    margin-top: 0;
    color: rgb(231, 231, 231);
}

.content-frame {
    background-color: white;
    padding: 20px;
    margin: 40px;
    text-align: center;
    width: calc(100% - 3.5in);
    margin-left: auto;
    margin-right: auto;
    box-sizing: border-box;
    border-radius: 10px;
}

.navbar {
    display: flex;
    justify-content: center;
    margin-bottom: 20px;
}


.navbar a {
    font-family: "Source Sans Pro", Arial, sans-serif;
    font-size: 18px;
    font-weight: 100;
    text-decoration: none;
    margin: 0 10px;
    color: black;
}

.navbar-button:hover {
    opacity: 0.7;
    transition: .2s;
}

.profile-picture {
    width: 200px;
    height: 200px;
    border-radius: 50%;
    margin-top: 20px;
    margin-bottom: 20px;
}

.project-image {
    width: 30%;
    height: auto;
    border-radius: 10px;
    margin-top: 20px;
    margin-bottom: 20px;
}

.project-image:hover {
    opacity: 0.7;
    transition: .5s;
    cursor: pointer;
}

.section {
    margin-top: 40px;
    padding-bottom: 20px;
    position: relative;
}

.section h2 {
    font-family: "Source Sans Pro", Arial, sans-serif;
    font-size: 30px;
    font-weight: 100;
    margin-top: 0;
}

.section p {
    font-family: "Source Sans Pro", Arial, sans-serif;
    font-size: 16px;
    font-weight: 100;
    margin-top: 10px;
}

.section h2:after {
    content: "";
    display: block;
    width: 80px;
    height: 3px;
    background: linear-gradient(to right, #09203F, #537895);
    margin: 10px auto;
}

